# Project3_Rust

./: README.md  references.txt
Code/: README.md
Code/backend/: Cargo.toml
Code/backend/src/: main.rs
Code/common/src/: Backend.rs  Connect4.rs  lib.rs  main.rs
Code/frontend/: Cargo.toml  index.html
Code/frontend/src/: Connect4Computer.rs  HowToToot.rs  ScoreBoard.rs  main.rs
backend/: Cargo.toml  Rocket.toml
backend/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3239119311307611064.wt  collection-2--3239119311307611064.wt  collection-4--3239119311307611064.wt  index-1--3239119311307611064.wt  index-3--3239119311307611064.wt  index-5--3239119311307611064.wt  index-6--3239119311307611064.wt  sizeStorer.wt
backend/data/diagnostic.data/: metrics.2023-04-11T02-31-22Z-00000
backend/src/: backend.rs  main.rs
common/: Cargo.toml
common/src/: Backend.rs  Connect4.rs  TootOtto.rs  lib.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: Connect4Computer.rs  Connect4Human.rs  GameHistory.rs  Home.rs  HowToConnect4.rs  HowToToot.rs  ScoreBoard.rs  TootOttoComputer.rs  TootOttoHuman.rs  main.rs
rustlang-rocket-mongodb/: Cargo.toml
rustlang-rocket-mongodb/src/: main.rs
