[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "=1.0.126", features = ["derive"] }

[dependencies.mongodb]
version = "2.4.0"
default-features = false
features = ["tokio-sync"]