[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.9.0"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = {version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
once_cell = "1"
stdweb = "0.4.20"
yew-canvas = "0.2.4"
gloo = "0.3"
gloo-utils = "0.1"
js-sys = "0.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.95"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Navigator",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'DomRect',
    'Location',
    'HtmlSelectElement',
]
